// Copyright Â© 2021 Durudex

// This file is part of Durudex: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.

// Durudex is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.

// You should have received a copy of the GNU Affero General Public License
// along with Durudex. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package durudex.authservice;

option go_package = "github.com/Durudex/durudex-auth-service;protobuf";

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc Verify(VerifyRequest) returns (Status);
  rpc GetVerifyCode(GetVerifyCodeRequest) returns (Status);
  rpc RefreshTokens (RefreshTokensRequest) returns (RefreshTokensResponse);
}

message SignUpRequest {
  string username = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  google.protobuf.Timestamp birthday = 5;
  int32 sex = 6;
}

message SignUpResponse {
  uint64 id = 1;
}

message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message RefreshTokensRequest {
  string refreshToken = 1;
}

message RefreshTokensResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message VerifyRequest {
  uint64 id = 1;
  int32 code = 2;
}

message Status {
  bool status = 1;
}

message GetVerifyCodeRequest {
  string email = 1;
  string name = 2;
}
